Bug fix: add missing acct, feedbackwrap styles IM-679

--- a/assess2/vue-src/src/assess2.css
+++ b/assess2/vue-src/src/assess2.css
@@ -348,4 +348,57 @@ input[type=text]:disabled, .mathquill-math-field.disabled {
   margin-left: 16px;
 }
 
-/* mobile adjustments */
+table.tchart {
+	border-collapse: collapse;
+}
+table.tchart td {
+	min-width: 3em;
+}
+table.acctstatement {
+	border-collapse: collapse;
+}
+table.acctstatement th, table.acctstatement td {
+	border: 1px solid #eee;
+	background-color: #fff;
+	padding: 1px 5px;
+}
+
+table.acctstatement thead th {
+	text-align: center;
+	z-index: 20;
+	background-color: #eef;
+	font-weight: bold;
+	border-bottom: 2px solid #333;
+	padding: 5px;
+}
+table.acctstatement.noborder  td {
+	border: 0px;
+}
+input.iscredit {
+  padding-left: 2em;
+}
+
+span.inlinebtn {
+	cursor: pointer;
+	border: 1px solid #000;
+	padding: 5px 10px;
+	line-height: 1em;
+	display: inline-block;
+	background: #efe;
+	margin: 10px;
+}
+span.inlinebtn:hover {
+	background: #dfd;
+}
+.feedbackwrap {
+	display: block;
+	padding: 5px;
+	background: #fff;
+	border: 1px solid #ccc;
+}
+.feedbackwrap.correct {
+	background: #efe;
+}
+.feedbackwrap.incorrect {
+	background: #fee;
+}
